--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -52,9 +52,7 @@ jobs:
             "repo": "gdext",
             "num": "master",
             "commit-sha": "${{ github.sha }}",
-            "date": "${{ github.event.head_commit.timestamp }}",
-            "pr-author": "${{ github.event.head_commit.author.login }}",
-            "pr-title": "${{ github.event.head_commit.message }}"
+            "date": "${{ github.event.head_commit.timestamp }}"
           }
           HEREDOC
           )
