--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -2,6 +2,11 @@ name: PR workflow
 
 on:
   pull_request:
+    types:
+#      - opened
+#      - reopened
+      - closed
+      - synchronize
   push:
     branches: [master]
 
