--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -3,8 +3,8 @@ name: PR workflow
 on:
   pull_request:
     types:
-#      - opened
-#      - reopened
+      - opened
+      - reopened
       - closed
       - synchronize
   push:
