--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -13,6 +13,7 @@ on:
 jobs:
   notify-docs:
     runs-on: ubuntu-latest
+    environment: docs-generator
     steps:
       - name: "Checkout"
         uses: actions/checkout@v3
