--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -82,7 +82,7 @@ jobs:
       - name: "Notify doc workflow"
         uses: peter-evans/repository-dispatch@v2
         with:
-          token: ${{ secrets.PAT }}
+          token: ${{ secrets.DOCS_GENERATOR_PAT }}
           repository: Bromeon/bromeon.github.io
           event-type: 'Generate docs'
           client-payload: ${{ env.GDEXT_JSON }}
