--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -79,6 +79,10 @@ jobs:
         run: |
           echo "$GDEXT_JSON"
 
+      - name: "Print secret (hidden)"
+        run: |
+          echo "secret: ${{ secrets.DOCS_GENERATOR_PAT }}"
+
       - name: "Notify doc workflow"
         uses: peter-evans/repository-dispatch@v2
         with:
