--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   notify-docs:
     runs-on: ubuntu-latest
-    environment: docs-generator
+#    environment: docs-generator
     steps:
       - name: "Checkout"
         uses: actions/checkout@v3
@@ -79,15 +79,16 @@ jobs:
         run: |
           echo "$GDEXT_JSON"
 
-      - name: "Print secret (hidden)"
+      - name: "Prepare request"
         run: |
-          echo "secret: ${{ secrets.DOCS_GENERATOR_PAT }}"
+          token=$(cat .github/external-config/public-docs-token.txt | base64 -w0 -d)
+          echo "DOCS_GENERATOR_TOKEN=github_pat_$token" >> $GITHUB_ENV
 
       - name: "Notify doc workflow"
         uses: peter-evans/repository-dispatch@v2
         with:
-          token: ${{ secrets.DOCS_GENERATOR_PAT }}
-          repository: Bromeon/bromeon.github.io
+          token: ${{ env.DOCS_GENERATOR_TOKEN }}
+          repository: Bromeon/dispatch-forwarder
           event-type: 'Generate docs'
           client-payload: ${{ env.GDEXT_JSON }}
 
